--- a/index.html
+++ b/index.html
@@ -3,11 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="estilos/style.css">
   <title>Projeto redes sociais</title>
 </head>
 <body>
-  <header>
-    <h1>Hello World</h1>
-  </header>
+    <main>
+      <section id="telefone">
+        <iframe src="home.html" frameborder="0" name="tela" id="tela">Seu navegador não é compatível</iframe>
+      </section>
+      <section id="redes_sociais">
+        <a href="" target="tela"><img src="imagens/logo-home.jpg" alt="Home"></a><br>
+        <a href="" target="tela"><img src="imagens/logo-youtube.jpg" alt="Youtube"></a><br>
+        <a href="" target="tela"><img src="imagens/logo-github.jpg" alt="Github"></a><br>
+        <a href="" target="tela"><img src="imagens/logo-facebook.jpg" alt="Facebook"></a><br>
+        <a href="" target="tela"><img src="imagens/logo-twitter.jpg" alt="Twitter"></a><br>
+        <a href="" target="tela"><img src="imagens/logo-instagram.jpg" alt="Instagram"></a>
+      </section>
+    </main>
 </body>
 </html>
