--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <iframe src="home.html" frameborder="0" name="tela" id="tela">Seu navegador não é compatível</iframe>
       </section>
       <section id="redes_sociais">
-        <a href="" target="tela"><img src="imagens/logo-home.jpg" alt="Home"></a><br>
+        <a href="home.html" target="tela"><img src="imagens/logo-home.jpg" alt="Home"></a><br>
         <a href="" target="tela"><img src="imagens/logo-youtube.jpg" alt="Youtube"></a><br>
         <a href="" target="tela"><img src="imagens/logo-github.jpg" alt="Github"></a><br>
         <a href="" target="tela"><img src="imagens/logo-facebook.jpg" alt="Facebook"></a><br>
