--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="estilos/style.css">
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <title>Projeto redes sociais</title>
 </head>
 <body>
