Minhas redes sociais

--- a/facebook.html
+++ b/facebook.html
@@ -15,6 +15,6 @@
     </style>
   </head>
   <body>
-      <img src="imagens/tela-facebook.jpg" alt="Facebook"><a href="https://www.facebook.com/fabio.araujobruno.14?locale=pt_BR">ACESSE</a>
+      <img src="imagens/Facebook.jpg" alt="Facebook"><a href="https://www.facebook.com/fabio.araujobruno.14?locale=pt_BR" target="_blank">ACESSE</a>
   </body>
 </html>
