--- a/github.html
+++ b/github.html
@@ -15,6 +15,6 @@
   </style>
 </head>
 <body>
-    <img src="imagens/tela-github.jpg" alt="GitHub"><a href="https://github.com/Fabio-arbr">ACESSE</a>
+    <img src="imagens/Github.jpg" alt="GitHub"><a href="https://github.com/Fabio-arbr" target="_blank">ACESSE</a>
 </body>
 </html>
