--- a/twitter.html
+++ b/twitter.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="estilos/socialmedias.css">
-  <title>Twitter</title>
-  <style>
-    a{
-      background-color: black;
-    }
-    a:hover{
-      background-color: rgb(39, 39, 39);
-    }
-  </style>
-</head>
-<body>
-    <img src="imagens/tela-twitter.jpg" alt="Twitter"><a href="https://twitter.com/FbioAra45280024">ACESSE</a>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="estilos/socialmedias.css" />
+    <title>Twitter</title>
+    <style>
+      a {
+        background-color: black;
+      }
+      a:hover {
+        background-color: rgb(39, 39, 39);
+      }
+    </style>
+  </head>
+  <body>
+    <img src="imagens/Twitter.jpg" alt="Twitter" /><a
+      href="https://twitter.com/FbioAra45280024" target="_blank">ACESSE</a
+    >
+  </body>
 </html>
