--- a/instagram.html
+++ b/instagram.html
@@ -15,6 +15,6 @@
   </style>
 </head>
 <body>
-    <img src="imagens/tela-instagram.jpg" alt="Instagram"><a href="https://www.instagram.com/fabioaraujobruno/">ACESSE</a>
+    <img src="imagens/Instagram.jpg" alt="Instagram"><a href="https://www.instagram.com/fabioaraujobruno/" target="_blank">ACESSE</a>
 </body>
 </html>
